[package]
name = "overmount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#argh = { version = "^0.1" }
#itertools = { version = "^0.10" }
#ron = { version = "^0.8" }
#serde = { version = "^1" }
sys-mount = { version = "^2" }
thiserror = { version = "^1" }
mkfs-btrfs-rs = {path="../mkfs-btrfs-rs"}
