[package]
name = "overmount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mkfs-btrfs-rs = { version = "^0" }
thiserror = { version = "^1" }
sys-mount = { version = "^2" }
#itertools = { version = "^0.10" }
#ron = { version = "^0.8" }
#serde = { version = "^1" }
zbus = { version = "3.8.0", features = ["lazy_static", "uuid"] }
lazy_static = "1.4.0"
#uuid = { version = "1.3.0", features = ["serde", "v4"] }
