[package]
name = "rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "toml"]
all = ["serde", "json", "ron", "toml", "yaml"]
serde = ["dep:serde", "bytesize/serde"]
json = ["dep:serde_json", "serde"]
ron = ["dep:ron", "serde"]
toml = ["dep:toml", "serde"]
yaml = ["dep:serde_yaml", "serde"]

[[bin]]
name = "rover"

[dependencies]
#mkfs-btrfs-rs = { version = "^0" } # TODO: Integrate
thiserror = { version = "^1" }
#anyhow = { version = "1.0.69" }
sudo = { version = "^0.6" }
libmount = { version = "0.1.15" }
bytesize = { version = "1.1.0" }

#itertools = { version = "^0.10" }
#zbus = { version = "3.8.0", features = ["lazy_static", "uuid"] }
#lazy_static = "1.4.0"
#uuid = { version = "1.3.0", features = ["serde", "v4"] }

serde = { version = "^1", features = ["derive"], optional = true }
serde_json = { version = "1.0.92", optional = true }
ron = { version = "^0.8", optional = true }
toml = { version = "0.7.1", optional = true }
serde_yaml = { version = "0.9.17", optional = true }
